--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "build": "tsc -p .",
-    "lint": "tslint -c tslint.json -p tsconfig.json --fix"
+    "dev": "nodemon src/app.js"
+
   },
   "keywords": [],
   "author": "",
