--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DB_PASS=admin
 DB_HOST=db
 DB_PORT=5432
 PORT=3000
+
+DB_TEST_NAME=congreso
+DB_TEST_USER=postgres
+DB_TEST_PASS=admin
+DB_TEST_HOST=db-test
